center footer, fix annoying overflow-x bug

--- a/framebuzz/static/framebuzz/tumblr/css/sass/screen.scss
+++ b/framebuzz/static/framebuzz/tumblr/css/sass/screen.scss
@@ -32,6 +32,8 @@
     margin-right: 0;
     padding-left: 0;
     padding-right: 0;
+    overflow: hidden;
+    width: 100%;
 }
 
 .embed-responsive-4by3 {
